--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="app" class="w-100 p-3"></div>
+        <div id="app" class="w-100"></div>
         <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
